Exodus font Not showing bug
fixed Exodus font not showing up bug problem

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: Exodus;
-	src: url("../FONTS/Exodus-PersonalUse-Striped.OTF");
+	src: url("../FONTS/Exodus-PersonalUse-Striped.otf");
 }
 @font-face {
 	font-family: Bebas;
